src/components/Widgets/Row.module.scss
.root {
    box-sizing: border-box;
    display: flex;
    position: relative;

    [dir=ltr] & {
        direction: ltr !important;
    }

    [dir=rtl] & {
        direction: rtl !important;
    }
}

.root.fill {
    width: 100%;
    height: 100%;
}

.background {
    position: relative;

    [dir=ltr] & {
        left: 0px;
        padding-right: 0.5em;
    }

    [dir=rtl] & {
        right: 0px;
        padding-left: 0.5em;
    }

    display: flex;
    align-items: center;
    border-bottom: 2px solid transparent;
    height: 100%;
    flex: 1;
}

.background.clickable {
    user-select: none;
}

.background.clickable:hover {
    background: var(--info-background) !important;
    border-bottom: 2px solid var(--hover-color);
}

.icons {
    position: relative;

    [dir=ltr] & {
        left: 0px;
    }

    [dir=rtl] & {
        right: 0px;
    }

    display: flex;
    align-items: center;
    height: 100%;
    position: absolute;
    background: transparent;
}

.icons>* {
    margin-left: 0.3em;
    margin-right: 0.3em;
}

